<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.sean.green.share.toShare.ToShareViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_dialog_share_cancel"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_dialog_share_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_dialog_share_title"
            app:srcCompat="@drawable/error" />

        <TextView
            android:id="@+id/text_dialog_share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/text_dialog_share_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_dialog_share_explain"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_dialog_share_title"
            app:srcCompat="@drawable/presentation" />

        <TextView
            android:id="@+id/text_dialog_share_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/text_dialog_share_explain"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_dialog_share_explain"
            app:layout_constraintStart_toEndOf="@+id/image_dialog_share_explain" />

        <EditText
            android:id="@+id/editText_dialog_share_explain"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/dialog_edit_text_frame"
            android:ems="10"
            android:fontFamily="@font/noto_sans"
            android:gravity="top"
            android:hint="@string/editText_dialog_share_explain"

            android:lines="5"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@={viewModel.achievement}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_dialog_share_explain" />

        <ImageView
            android:id="@+id/image_dialog_share_time"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_calendar"
            app:layout_constraintStart_toStartOf="@+id/editText_dialog_share_explain"
            app:layout_constraintTop_toBottomOf="@+id/editText_dialog_share_explain" />

        <TextView
            android:id="@+id/text_dialog_share_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/text_dialog_share_time"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_dialog_share_time"
            app:layout_constraintStart_toEndOf="@+id/image_dialog_share_time"
            app:layout_constraintTop_toTopOf="@+id/image_dialog_share_time" />

        <EditText
            android:id="@+id/editText_dialog_share_time"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/dialog_edit_text_frame"
            android:ems="10"
            android:fontFamily="@font/noto_sans"
            android:gravity="top"
            android:hint="@string/editText_dialog_share_time"
            android:lines="5"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@={viewModel.time}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_dialog_share_time" />

        <ImageView
            android:id="@+id/image_dialog_share_content"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/editText_dialog_share_time"
            app:layout_constraintTop_toBottomOf="@+id/editText_dialog_share_time"
            app:srcCompat="@drawable/office_material"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_dialog_share_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/text_dialog_share_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_dialog_share_content"
            app:layout_constraintStart_toEndOf="@+id/image_dialog_share_content"
            app:layout_constraintTop_toTopOf="@+id/image_dialog_share_content"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_dialog_share_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/dialog_edit_text_frame"
            android:gravity="top"
            android:hint="@string/editText_dialog_share_content"
            android:lines="5"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@={viewModel.content}"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_dialog_share_content"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_dialog_share_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/text_dialog_share_chart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/button_dialog_share_send"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/text_dialog_share_chart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_dialog_share_chart"
            app:layout_constraintTop_toTopOf="@+id/text_dialog_share_chart">

            <RadioButton
                android:id="@+id/morning_time2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/noto_sans"
                android:paddingStart="10dp"
                android:text="是" />

            <RadioButton
                android:id="@+id/morning_time"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/noto_sans"
                android:paddingStart="10dp"
                android:text="否" />

        </RadioGroup>

        <Button
            android:id="@+id/button_dialog_share_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/dialog_frame"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/button_dialog_share_send"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
